--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-![](https://github.com/m2ozgun/JWallet/blob/master/demo.gif?raw=true)
+![demo](https://github.com/m2ozgun/JWallet/blob/master/demo.gif?raw=true)
